--- a/ScreenMusic.Web/Pages/MusicByArtist.razor
+++ b/ScreenMusic.Web/Pages/MusicByArtist.razor
@@ -13,7 +13,7 @@
         @foreach (var musica in ListMusicByPage)
         {
             <MudItem xs="3">
-                <CardMusic Musica=musica />
+                <CardMusic Music=musica />
             </MudItem>
         }
     </MudGrid>
