--- a/ScreenMusic.Web/Layout/NavMenu.razor
+++ b/ScreenMusic.Web/Layout/NavMenu.razor
@@ -10,4 +10,8 @@
         <MudNavLink Href="/MusicByMusicGender">Músicas por gênero</MudNavLink>
         <MudNavLink Href="/CreateMusic">Cadastrar</MudNavLink>
     </MudNavGroup>
+    <MudNavGroup Title="Gêneros Musicais" Icon="@Icons.Material.Filled.LibraryMusic" Expanded="true">
+        <MudNavLink Href="/MusicGender">Exibir</MudNavLink>
+        <MudNavLink Href="/CreateMusicGender">Cadastrar</MudNavLink>
+    </MudNavGroup>
 </MudNavMenu>
