--- a/ScreenMusic.Web/Layout/NavMenu.razor
+++ b/ScreenMusic.Web/Layout/NavMenu.razor
@@ -7,11 +7,11 @@
     </MudNavGroup>
     <MudNavGroup Title="Músicas" Icon="@Icons.Material.Filled.QueueMusic" Expanded="true">
         <MudNavLink Href="/MusicByArtist">Músicas por artista</MudNavLink>
-        <MudNavLink Href="/MusicByMusicGender">Músicas por gênero</MudNavLink>
+        <MudNavLink Href="/MusicByMusicGenre">Músicas por gênero</MudNavLink>
         <MudNavLink Href="/CreateMusic">Cadastrar</MudNavLink>
     </MudNavGroup>
     <MudNavGroup Title="Gêneros Musicais" Icon="@Icons.Material.Filled.LibraryMusic" Expanded="true">
-        <MudNavLink Href="/MusicGender">Exibir</MudNavLink>
-        <MudNavLink Href="/CreateMusicGender">Cadastrar</MudNavLink>
+        <MudNavLink Href="/MusicGenre">Exibir</MudNavLink>
+        <MudNavLink Href="/CreateMusicGenre">Cadastrar</MudNavLink>
     </MudNavGroup>
 </MudNavMenu>
