--- a/ScreenMusic.WebMvc/Views/Artist/Index.cshtml
+++ b/ScreenMusic.WebMvc/Views/Artist/Index.cshtml
@@ -21,7 +21,7 @@
 <div class="row">
     @foreach (var artist in Model)
     {
-        <div class="col-xs-3">
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
             @await Html.PartialAsync("_CardArtist", artist)
         </div>
     }
