--- a/ScreenMusic.WebMvc/Views/Artist/_CardArtist.cshtml
+++ b/ScreenMusic.WebMvc/Views/Artist/_CardArtist.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ScreenMusic.Arguments.OutputArtist
 
-<div class="card">
+<div class="card h-100">
     <img class="card-img-top" src="@(Model.ProfilePhoto!.Contains("Photo") ? $"https://localhost:7089/{Model.ProfilePhoto}" : "images/cardArtista.png")" alt="@Model.Name">
     <div class="card-header">
         <h6 class="card-title">@Model.Name</h6>
