--- a/ScreenMusic.WebMvc/Views/Artist/Index.cshtml
+++ b/ScreenMusic.WebMvc/Views/Artist/Index.cshtml
@@ -15,7 +15,7 @@
             }
         </ul>
     </nav>
-    <a href="@Url.Action("Create", "Artist")" class="btn btn-primary">Criar Artista</a>
+    <a href="@Url.Action("Create", "Artist")" class="btn btn-primary btn-lg">Criar Artista</a>
 </div>
 
 <div class="row">
