--- a/ScreenMusic.WebMvc/wwwroot/css/site.css
+++ b/ScreenMusic.WebMvc/wwwroot/css/site.css
@@ -20,3 +20,34 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.card {
+    height: 450px;
+    display: flex;
+    flex-direction: column;
+}
+
+.card-img-top {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+
+.card-body {
+    flex: 1;
+    overflow: hidden;
+}
+
+.card-text {
+    max-height: 80px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+}
+
+.card-footer {
+    background-color: #f8f9fa;
+    margin-top: auto;
+}
