feat(telas de musica e genero musical)

--- a/ScreenMusic.WebMvc/Views/Artist/Create.cshtml
+++ b/ScreenMusic.WebMvc/Views/Artist/Create.cshtml
@@ -41,7 +41,7 @@
         }
 
         <div class="d-flex justify-content-between align-items-center mt-4">
-            <a class="btn btn-info" href="@Url.Action("Index", "Artist")">Voltar</a>
+            <a class="btn btn-info" asp-action="Index" asp-controller="Artist">Voltar</a>
             <button type="submit" class="btn btn-primary ml-auto">Cadastrar</button>
         </div>
     </form>
