--- a/ScreenMusic.WebMvc/Views/Artist/Index.cshtml
+++ b/ScreenMusic.WebMvc/Views/Artist/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<ScreenMusic.Arguments.OutputArtist>
 @{
-    ViewData["Title"] = "Artistas cadastrados";
+    ViewData["Title"] = "Artistas";
 }
 
 <div class="mt-4 mb-4 d-flex justify-content-between">
