--- a/ScreenMusic.WebMvc/Views/Music/Index.cshtml
+++ b/ScreenMusic.WebMvc/Views/Music/Index.cshtml
@@ -1,5 +1,30 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model List<ScreenMusic.Arguments.OutputMusic>
 @{
+    ViewData["Title"] = "Músicas Cadastradas";
+    int currentPage = ViewBag.CurrentPage;
+    int totalPage = ViewBag.TotalPage;
 }
+
+<div class="container mt-5">
+    <h4 class="mb-4 text-center">Músicas</h4>
+
+    <div class="row">
+        @foreach (var music in Model)
+        {
+            <div class="col-md-3 mb-4">
+                @await Html.PartialAsync("_CardMusic", music)
+            </div>
+        }
+    </div>
+
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            @for (int i = 1; i <= totalPage; i++)
+            {
+                <li class="page-item @(i == currentPage ? "active" : "")">
+                    <a class="page-link" asp-action="Index" asp-route-pageNumber="@i" asp-route-pageSize="8">@i</a>
+                </li>
+            }
+        </ul>
+    </nav>
+</div>
