--- a/ScreenMusic.WebMvc/Views/Artist/Index.cshtml
+++ b/ScreenMusic.WebMvc/Views/Artist/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="mt-4 mb-4 d-flex justify-content-between">
-    <h4>Artistas cadastrados</h4>
+    <h4>Artistas</h4>
     <nav aria-label="Page navigation">
         <ul class="pagination">
             @for (int i = 1; i <= ViewBag.TotalPage; i++)
