--- a/ScreenMusic.WebMvc/Views/Music/_CardMusic.cshtml
+++ b/ScreenMusic.WebMvc/Views/Music/_CardMusic.cshtml
@@ -1,38 +1,35 @@
-﻿@model ScreenMusic.Arguments.OutputMusic
+﻿@using ScreenMusic.Arguments
+@model OutputMusic
 
 <div class="card h-100">
-    <img class="card-img-top" src="images/cardArtista.png" alt="@Model.Name">
+    <img class="card-img-top" src="@(Model.Artist!.ProfilePhoto!.Contains("Photo") ? $"https://localhost:7089{Model.Artist.ProfilePhoto}" : "images/cardArtista.png")" alt="@Model.Artist.Name">
     <div class="card-header">
         <h6 class="card-title">@Model.Name</h6>
     </div>
-    <div class="card-body">
-        @* <p class="card-text">Artista/Banda: @Model.ArtistName</p> *@
-        <p class="card-text">Ano de Lançamento: @Model.ReleaseYear</p>
-    </div>
     <div class="card-footer d-flex justify-content-between">
         <a class="btn btn-warning" asp-action="Update" asp-controller="Music" asp-route-id="@Model.Id">
-            <i class="bi bi-pencil-square"></i> Detalhes
+            <i class="bi bi-pencil-square"></i>
         </a>
-        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal-@Model.Id">
-            <i class="bi bi-trash"></i> Excluir
+        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal">
+            <i class="bi bi-trash"></i>
         </button>
-    </div>
 
-    <div class="modal fade" id="confirmDeleteModal-@Model.Id" tabindex="-1" aria-labelledby="confirmDeleteModalLabel-@Model.Id" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="confirmDeleteModalLabel-@Model.Id">Confirmar Exclusão</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Tem certeza que deseja excluir a música <strong>@Model.Name</strong>?
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <form asp-action="Delete" asp-controller="Music" asp-route-id="@Model.Id" method="post">
-                        <button type="submit" class="btn btn-danger">Confirmar Exclusão</button>
-                    </form>
+        <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="confirmDeleteModalLabel">Confirmar Exclusão</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Tem certeza que deseja excluir a música <strong>@Model.Name</strong>?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <form asp-action="Delete" asp-controller="Music" asp-route-id="@Model.Id">
+                            <button type="submit" class="btn btn-danger">Confirmar Exclusão</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
