--- a/ScreenMusic.WebMvc/Views/MusicGenre/Index.cshtml
+++ b/ScreenMusic.WebMvc/Views/MusicGenre/Index.cshtml
@@ -11,7 +11,7 @@
 
     <h1 class="display-4">Listagem de Gêneros Musicais</h1>
 
-    <table class="table" id="host-table">
+    <table class="table" id="table">
         <thead>
             <tr>
                 <th scope="col">#</th>
