--- a/ScreenMusic.WebMvc/Views/Shared/_Layout.cshtml.css
+++ b/ScreenMusic.WebMvc/Views/Shared/_Layout.cshtml.css
@@ -1,48 +1,87 @@
-﻿/* Please see documentation at https://learn.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+﻿a.navbar-brand {
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
 
 a {
-  color: #0077cc;
+    color: #0077cc;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #e5e5e5;
 }
+
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
 button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+    font-size: 1rem;
+    line-height: inherit;
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px;
+    position: absolute;
+    bottom: 0;
+    white-space: nowrap;
+    line-height: 60px;
+    margin-left: 0;
+}
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 250px;
+    padding: 48px 0 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transition: all 0.3s;
+    background-color: #f8f9fa;
+    border-right: 1px solid #ddd;
+}
+
+    .sidebar .nav-link {
+        padding: 15px 20px;
+        font-size: 2.0rem;
+    }
+
+        .sidebar .nav-link .bi,
+        .sidebar .nav-link .bi::before {
+            font-size: 2.5rem;
+        }
+
+.content {
+    margin-left: 250px;
+    transition: margin-left 0.3s;
+    margin-top: 30px;
+}
+
+@media (max-width: 768px) {
+    .sidebar {
+        width: 100%;
+        padding-top: 56px;
+    }
+
+    .content {
+        margin-left: 0;
+    }
 }
